fix subsubsection of time consumption

--- a/main.tex
+++ b/main.tex
@@ -919,7 +919,7 @@ From the different file size we can see that, the disk cache is still working we
 
 %============================= section ==========================%
 \section{Time Consumption and Partition of work}
-\subsubsection{CPU, Scheduling, and OS Services}
+\subsection{CPU, Scheduling, and OS Services}
 The first part of the project required around 20 hours of work to complete. This included creating the tools necessary to measure the operating system and writing the report.\\
 The experiments were split accordingly:\\
 Measurement Overhead - Boyuan\\
@@ -933,7 +933,7 @@ Boyuan Qin: 16 + hours\\
 Dexin Qi: 16+ hours\\
 Qiheng Wang:16 + hours
 
-\subsubsection{Memory}
+\subsection{Memory}
 The experiments were split accordingly:\\
 RAM access time - Boyuan\\
 RAM bandwidth - Dexin\\
@@ -944,7 +944,7 @@ Boyuan Qin: 16 + hours\\
 Dexin Qi: 16 + hours\\
 Qiheng Wang:16 + hours
 
-\subsubsection{Network}
+\subsection{Network}
 The experiments were split accordingly:\\
 Round trip time - Dexin\\
 Peak bandwidth - Dexin\\
@@ -952,7 +952,7 @@ Connection overhead - Dexin\\
 
 The time we spent is:\\
 Dexin Qi: 30 + hours\\
-\subsubsection{File System}
+\subsection{File System}
 The experiments were split accordingly:\\
 Size of file cache - Boyuan\\
 File read time - Boyuan\\
