Add spacing to onehalf @main.tex

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage[T1]{fontenc}
+\usepackage{setspace}
 %\usepackage{adjustbox}
 
 
@@ -34,6 +35,7 @@
 
 \begin{document}
 
+\onehalfspacing
 \maketitle
 
 %============================= section ==========================%
